tests/lean/beginEndAsMacro.lean.expected.out
beginEndAsMacro.lean:19:2: error: unsolved goals
x : Nat
⊢ x + 0 = x
